--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,11 @@
 services:
   pihole:
     image: pihole/pihole:latest
+    
+    build:
+      context: ./volumes/src/pi-hole
+      dockerfile: test/_debian_12.Dockerfile
+
     restart: unless-stopped
     ports:
       - "53:53/tcp"
@@ -21,10 +26,3 @@ services:
     cap_add:
       - NET_ADMIN
       - SYS_NICE
-
-  it-tools:
-    image: corentinth/it-tools
-    container_name: it-tools
-    restart: unless-stopped
-    ports:
-      - "${IT_TOOLS_PORT}:80/tcp"
